removed unnecessary css that was messing up the responsiveness of the site. The first result and grid section are now resizing correctly with no overlapping of sections.

--- a/style.css
+++ b/style.css
@@ -7,33 +7,33 @@ background: linear-gradient(to bottom, #ffffff 0%, #F8EFE7 60%, #FFD7C0 100%);
 #resultContainer{
   margin-top:100px;
   width:100%;
-  height:600px;
+ /* height:600px;*/
 /*  border: solid 1px black;
 */}
 
 #wrapper{
   display:none;
   width:60%;
-  margin: -68px 0px 0px 30%;
+  margin: -120px 0px 0px 30%;
 
 }
 
 #results {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 20px;
-    padding: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    /*grid-gap: 20px;
+    padding: 10px;*/
 /*    border: 1px solid #000;
 */     background-color: #f8efe7;
-     grid-template-columns: 1fr 1fr 1fr;
-     width: 90%;
+/*     grid-template-columns: 1fr 1fr 1fr;*/     
+width: 92%;
 }
 
 .grid {
 /*    border: 1px solid #000;
-*/    padding: 20px;
-    height: 300px;
-    width:235px;
+*/    padding: 30px;
+   /* height: 300px;
+    width:235px;*/
 }
 
 #top {
@@ -73,7 +73,8 @@ background: linear-gradient(to bottom, #ffffff 0%, #F8EFE7 60%, #FFD7C0 100%);
 #info {
   float: left;
   margin-left:30%;
-  position: absolute;
+  margin-top: -120px;
+  /*position: absolute;*/
 }
 
 #searchArea{
@@ -161,10 +162,10 @@ background: linear-gradient(to bottom, #ffffff 0%, #F8EFE7 60%, #FFD7C0 100%);
   margin-top: 25px;
   font-family: 'Open Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
-  position: relative;
-  margin-top: 5%;
-  width:100%;
-  float:left;
+ /* position: relative;*/
+/*  margin-top: 5%;
+*/  width:100%;
+  /*float:left;*/
 }
 
 h2 {
@@ -187,13 +188,13 @@ p{
     font-weight: 900;
     font-size: 35px;
     width: 78%;
-    float:left;
-    margin-top:-60px;
+/*    float:left;*/    
+margin-top:-60px;
     margin-left:5%;
     background-color: #ecd0b6;
     margin-left: 10%;
-    position:absolute;
-    padding:50px;
+/*    position:absolute;*/    
+padding:50px;
 }
 
 #pageHeader2 {
@@ -201,14 +202,14 @@ p{
     font-family: 'Merriweather', serif;
     font-weight: 900;
     font-size: 35px;
-    width: 80%;
-    float:left;
-    margin-left:5%;
+    width: 78%;
+/*    float:left;
+*/    margin-left:5%;
     background-color: #ecd0b6;
     margin-left: 10%;
     padding:50px;
-    margin: 72px 0px -120px 10%;
-
+/*    margin: 72px 0px -120px 10%;
+*/
 /*    position: absolute;
 */}
 
